@@ -26,10 +26,15 @@ import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.BiFunction;
+import java.util.stream.Collectors;
 
 import static java.lang.foreign.ValueLayout.ADDRESS;
 import static java.lang.foreign.ValueLayout.JAVA_FLOAT;
@@ -40,7 +45,8 @@ import static org.elasticsearch.nativeaccess.jdk.LinkerHelper.functionAddressOrN
 
 public final class JdkVectorLibrary implements VectorLibrary {
 
-    static final Logger logger = LogManager.getLogger(JdkVectorLibrary.class);
+    private static final Logger logger = LogManager.getLogger(JdkVectorLibrary.class);
+    private static final int VEC_CAPS_OVERRIDE = getVecCapsOverride();
 
     private record OperationSignature<E extends Enum<E>>(Function function, E dataType, Operation operation) {}
 
@@ -50,7 +56,40 @@ public final class JdkVectorLibrary implements VectorLibrary {
     static final MethodHandle applyCorrectionsMaxInnerProductBulk$mh;
     static final MethodHandle applyCorrectionsDotProductBulk$mh;
 
+    static final MethodHandle bbqApplyCorrectionsEuclideanBulk$mh;
+    static final MethodHandle bbqApplyCorrectionsMaxInnerProductBulk$mh;
+    static final MethodHandle bbqApplyCorrectionsDotProductBulk$mh;
+
     private static final JdkVectorSimilarityFunctions INSTANCE;
+
+    /**
+     * Try to get a vec_caps override value from the {@code es.vec_caps_override} system property.
+     * This value is used to override the vector capabilities value returned by the native call
+     * to {@code vec_caps}; if the override is defined and valid (>= 0), and it is less then the
+     * one returned by {@code vec_caps}, the override is used to determine which functions to bind.
+     * This can be used to force binding to functions from a lower tier (e.g. AVX2 on a AVX-512
+     * capable processor), or to disable native functions completely (by passing 0).
+     * Usage: {@code -Des.vec_caps_override=1}.
+     * For benchmarks, add {@code --jvmArgsPrepend "--add-modules=jdk.incubator.vector -Des.vec_caps_override=..."}
+     * to {@code --args}. Note: {@code --jvmArgsPrepend} on the CLI replaces the {@code @Fork} annotation's
+     * {@code jvmArgsPrepend}, so {@code --add-modules=jdk.incubator.vector} must be included explicitly.
+     *
+     * @return the caps override value, or -1 if the property is not defined or invalid.
+     */
+    private static int getVecCapsOverride() {
+        try {
+            var capsOverrideString = System.getProperty("es.vec_caps_override", "-1");
+            try {
+                return Integer.parseInt(capsOverrideString);
+            } catch (NumberFormatException e) {
+                logger.warn("Invalid es.vec_caps_override value [{}]", capsOverrideString);
+                return -1;
+            }
+        } catch (Throwable t) {
+            logger.warn("Cannot read es.vec_caps_override value", t);
+        }
+        return -1;
+    }
 
     /**
      * Native functions in the native simdvec library can have multiple implementations, one for each "capability level".
@@ -83,122 +122,150 @@ public final class JdkVectorLibrary implements VectorLibrary {
         throw new LinkageError("Native function [" + functionName + "] could not be found");
     }
 
+    private static class NativeFunctions {
+
+        private record NativeFunction<E extends Enum<E>>(OperationSignature<E> op, String typeName, FunctionDescriptor descriptor) {}
+
+        private static final FunctionDescriptor intSingle = FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor longSingle = FunctionDescriptor.of(JAVA_LONG, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor floatSingle = FunctionDescriptor.of(JAVA_FLOAT, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor bulk = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
+        private static final FunctionDescriptor bulkOffsets = FunctionDescriptor.ofVoid(
+            ADDRESS,
+            ADDRESS,
+            JAVA_INT,
+            JAVA_INT,
+            ADDRESS,
+            JAVA_INT,
+            ADDRESS
+        );
+
+        final List<NativeFunction<?>> nativeFunctions = new ArrayList<>();
+
+        public NativeFunctions add(DataType type, Iterable<Function> functions, Iterable<Operation> operations) {
+            functions.forEach(f -> operations.forEach(op -> {
+                String typeName = switch (type) {
+                    case INT7U -> "i7u";
+                    case INT4 -> "i4";
+                    case INT8 -> "i8";
+                    case FLOAT32 -> "f32";
+                };
+                FunctionDescriptor descriptor = switch (op) {
+                    case SINGLE -> switch (type) {
+                        case INT7U, INT4 -> intSingle;
+                        case INT8, FLOAT32 -> floatSingle;
+                    };
+                    case BULK, BULK_SPARSE -> bulk;
+                    case BULK_OFFSETS -> bulkOffsets;
+                };
+                nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(f, type, op), typeName, descriptor));
+            }));
+            return this;
+        }
+
+        public NativeFunctions addBFloat16(Iterable<Function> functions, Iterable<Operation> operations) {
+            for (BFloat16QueryType type : BFloat16QueryType.values()) {
+                String typeName = switch (type) {
+                    case BFLOAT16 -> "Dbf16Qbf16";
+                    case FLOAT32 -> "Dbf16Qf32";
+                };
+                functions.forEach(f -> operations.forEach(op -> {
+                    FunctionDescriptor descriptor = switch (op) {
+                        case SINGLE -> floatSingle;
+                        case BULK, BULK_SPARSE -> bulk;
+                        case BULK_OFFSETS -> bulkOffsets;
+                    };
+                    nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(f, type, op), typeName, descriptor));
+                }));
+            }
+            return this;
+        }
+
+        public NativeFunctions addBBQ(Iterable<BBQType> bbqTypes, Iterable<Operation> operations) {
+            bbqTypes.forEach(type -> operations.forEach(op -> {
+                String typeName = switch (type) {
+                    case D1Q4 -> "d1q4";
+                    case D2Q4 -> "d2q4";
+                    case D4Q4 -> "d4q4";
+                };
+                FunctionDescriptor descriptor = switch (op) {
+                    case SINGLE -> longSingle;
+                    case BULK, BULK_SPARSE -> bulk;
+                    case BULK_OFFSETS -> bulkOffsets;
+                };
+                nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(Function.DOT_PRODUCT, type, op), typeName, descriptor));
+            }));
+            return this;
+        }
+
+        static Iterable<Function> allFunctions() {
+            return () -> Arrays.stream(Function.values()).iterator();
+        }
+
+        static Iterable<Operation> allOperations() {
+            return () -> Arrays.stream(Operation.values()).iterator();
+        }
+
+        static Iterable<BBQType> allBBQTypes() {
+            return () -> Arrays.stream(BBQType.values()).iterator();
+        }
+
+        private static String getOpName(Operation op) {
+            return switch (op) {
+                case SINGLE -> "";
+                case BULK -> "_bulk";
+                case BULK_OFFSETS -> "_bulk_offsets";
+                case BULK_SPARSE -> "_bulk_sparse";
+            };
+        }
+
+        private static String getFuncName(Function f) {
+            return switch (f) {
+                case COSINE -> "cos";
+                case DOT_PRODUCT -> "dot";
+                case SQUARE_DISTANCE -> "sqr";
+            };
+        }
+
+        public Map<OperationSignature<?>, MethodHandle> build(BiFunction<String, FunctionDescriptor, MethodHandle> binder) {
+            return nativeFunctions.stream()
+                .collect(
+                    Collectors.toUnmodifiableMap(
+                        f -> f.op,
+                        f -> binder.apply("vec_" + getFuncName(f.op.function()) + f.typeName + getOpName(f.op.operation()), f.descriptor)
+                    )
+                );
+        }
+    }
+
     static {
         LoaderHelper.loadLibrary("vec");
         MethodHandle vecCaps$mh = downcallHandle("vec_caps", FunctionDescriptor.of(JAVA_INT));
-        Map<OperationSignature<?>, MethodHandle> handles = new HashMap<>();
 
         try {
-            int caps = (int) vecCaps$mh.invokeExact();
-            logger.info("vec_caps=" + caps);
-            if (caps > 0) {
-                FunctionDescriptor intSingle = FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor longSingle = FunctionDescriptor.of(JAVA_LONG, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor floatSingle = FunctionDescriptor.of(JAVA_FLOAT, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor bulk = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
-                FunctionDescriptor bulkOffsets = FunctionDescriptor.ofVoid(
-                    ADDRESS,
-                    ADDRESS,
-                    JAVA_INT,
-                    JAVA_INT,
-                    ADDRESS,
-                    JAVA_INT,
-                    ADDRESS
-                );
+            int vecCaps = (int) vecCaps$mh.invokeExact();
+            final int finalVecCaps;
+            if (VEC_CAPS_OVERRIDE >= 0) {
+                finalVecCaps = Math.min(vecCaps, VEC_CAPS_OVERRIDE);
+                logger.info("vec_caps={}; es.vec_caps_override={}; using [{}]", vecCaps, VEC_CAPS_OVERRIDE, finalVecCaps);
+            } else {
+                finalVecCaps = vecCaps;
+                logger.info("vec_caps=" + finalVecCaps);
+            }
 
-                FunctionDescriptor bulkSparse = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
+            if (finalVecCaps > 0) {
 
-                for (Function f : Function.values()) {
-                    String funcName = switch (f) {
-                        case COSINE -> "cos";
-                        case DOT_PRODUCT -> "dot";
-                        case SQUARE_DISTANCE -> "sqr";
-                    };
-
-                    for (Operation op : Operation.values()) {
-                        String opName = switch (op) {
-                            case SINGLE -> "";
-                            case BULK -> "_bulk";
-                            case BULK_OFFSETS -> "_bulk_offsets";
-                            case BULK_SPARSE -> "_bulk_sparse";
-                        };
-
-                        for (DataType type : DataType.values()) {
-                            // Only byte vectors have cosine
-                            // as floats are normalized to unit length to use dot_product instead
-                            if (f == Function.COSINE && type != DataType.INT8) continue;
-                            // Only DOT_PRODUCT is needed for int4 — other functions are computed by
-                            // applying correction terms on top of the raw dot product result.
-                            if (f != Function.DOT_PRODUCT && type == DataType.INT4) continue;
-                            // BULK_SPARSE only for INT7U and INT8 — no native sparse functions exist for FLOAT32 or INT4
-                            if (op == Operation.BULK_SPARSE && (type == DataType.FLOAT32 || type == DataType.INT4)) continue;
-
-                            String typeName = switch (type) {
-                                case INT7U -> "i7u";
-                                case INT4 -> "i4";
-                                case INT8 -> "i8";
-                                case FLOAT32 -> "f32";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> switch (type) {
-                                    case INT7U, INT4 -> intSingle;
-                                    case INT8, FLOAT32 -> floatSingle;
-                                };
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, caps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-
-                        for (BFloat16QueryType type : BFloat16QueryType.values()) {
-                            // only byte vectors have cosine
-                            if (f == Function.COSINE) continue;
-                            // BULK_SPARSE not yet implemented for bfloat16
-                            if (op == Operation.BULK_SPARSE) continue;
-
-                            String typeName = switch (type) {
-                                case BFLOAT16 -> "Dbf16Qbf16";
-                                case FLOAT32 -> "Dbf16Qf32";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> floatSingle;
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, caps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-
-                        for (BBQType type : BBQType.values()) {
-                            // not implemented yet...
-                            if (f == Function.COSINE || f == Function.SQUARE_DISTANCE) continue;
-                            // BULK_SPARSE not yet implemented for BBQ
-                            if (op == Operation.BULK_SPARSE) continue;
-
-                            String typeName = switch (type) {
-                                case D1Q4 -> "d1q4";
-                                case D2Q4 -> "d2q4";
-                                case D4Q4 -> "d4q4";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> longSingle;
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, caps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-                    }
-                }
-
-                HANDLES = Collections.unmodifiableMap(handles);
+                HANDLES = new NativeFunctions()
+                    // Only DOT_PRODUCT is needed for int4 — other functions are computed by applying correction terms on top of the raw
+                    // dot.
+                    .add(DataType.INT4, List.of(Function.DOT_PRODUCT), NativeFunctions.allOperations())
+                    .add(DataType.INT7U, List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE), NativeFunctions.allOperations())
+                    // Only byte vectors have cosine as other types are normalized to unit length to use dot_product instead
+                    .add(DataType.INT8, NativeFunctions.allFunctions(), NativeFunctions.allOperations())
+                    .add(DataType.FLOAT32, List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE), NativeFunctions.allOperations())
+                    .addBFloat16(List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE), NativeFunctions.allOperations())
+                    .addBBQ(NativeFunctions.allBBQTypes(), NativeFunctions.allOperations())
+                    .build((functionName, functionDescriptor) -> bindFunction(functionName, finalVecCaps, functionDescriptor));
 
                 FunctionDescriptor score = FunctionDescriptor.of(
                     JAVA_FLOAT,
@@ -215,13 +282,43 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     ADDRESS // scores
                 );
 
-                applyCorrectionsEuclideanBulk$mh = bindFunction("diskbbq_apply_corrections_euclidean_bulk", caps, score);
-                applyCorrectionsMaxInnerProductBulk$mh = bindFunction("diskbbq_apply_corrections_maximum_inner_product_bulk", caps, score);
-                applyCorrectionsDotProductBulk$mh = bindFunction("diskbbq_apply_corrections_dot_product_bulk", caps, score);
+                applyCorrectionsEuclideanBulk$mh = bindFunction("diskbbq_apply_corrections_euclidean_bulk", finalVecCaps, score);
+                applyCorrectionsMaxInnerProductBulk$mh = bindFunction(
+                    "diskbbq_apply_corrections_maximum_inner_product_bulk",
+                    finalVecCaps,
+                    score
+                );
+                applyCorrectionsDotProductBulk$mh = bindFunction("diskbbq_apply_corrections_dot_product_bulk", finalVecCaps, score);
+
+                // BBQ corrections: per-vector inline layout with nodes array
+                FunctionDescriptor bbqScore = FunctionDescriptor.of(
+                    JAVA_FLOAT,
+                    ADDRESS,     // data (entire vector data segment)
+                    JAVA_INT,    // bulkSize
+                    JAVA_INT,    // vectorSizeInBytes
+                    JAVA_INT,    // pitchInBytes
+                    JAVA_INT,    // dimensions
+                    JAVA_FLOAT,  // queryLowerInterval
+                    JAVA_FLOAT,  // queryUpperInterval
+                    JAVA_INT,    // queryComponentSum
+                    JAVA_FLOAT,  // queryAdditionalCorrection
+                    JAVA_FLOAT,  // queryBitScale
+                    JAVA_FLOAT,  // indexBitScale
+                    JAVA_FLOAT,  // centroidDp
+                    ADDRESS      // scores
+                );
+
+                bbqApplyCorrectionsEuclideanBulk$mh = bindFunction("bbq_apply_corrections_euclidean_bulk", finalVecCaps, bbqScore);
+                bbqApplyCorrectionsMaxInnerProductBulk$mh = bindFunction(
+                    "bbq_apply_corrections_maximum_inner_product_bulk",
+                    finalVecCaps,
+                    bbqScore
+                );
+                bbqApplyCorrectionsDotProductBulk$mh = bindFunction("bbq_apply_corrections_dot_product_bulk", finalVecCaps, bbqScore);
 
                 INSTANCE = new JdkVectorSimilarityFunctions();
             } else {
-                if (caps < 0) {
+                if (finalVecCaps < 0) {
                     logger.warn("""
                         Your CPU supports vector capabilities, but they are disabled at OS level. For optimal performance, \
                         enable them in your OS/Hypervisor/VM/container""");
@@ -230,6 +327,9 @@ public final class JdkVectorLibrary implements VectorLibrary {
                 applyCorrectionsEuclideanBulk$mh = null;
                 applyCorrectionsMaxInnerProductBulk$mh = null;
                 applyCorrectionsDotProductBulk$mh = null;
+                bbqApplyCorrectionsEuclideanBulk$mh = null;
+                bbqApplyCorrectionsMaxInnerProductBulk$mh = null;
+                bbqApplyCorrectionsDotProductBulk$mh = null;
                 INSTANCE = null;
             }
         } catch (Throwable t) {
@@ -340,9 +440,9 @@ public final class JdkVectorLibrary implements VectorLibrary {
             int count,
             MemorySegment result
         ) {
-            assert elementBits % 8 == 0 : "requires byte-aligned element types";
+            long queryBytes = elementBits >= 8 ? (long) length * elementBits / 8 : length;
             Objects.checkFromIndexSize(0L, (long) count * Long.BYTES, addresses.byteSize());
-            Objects.checkFromIndexSize(0L, (long) length * elementBits / 8, b.byteSize());
+            Objects.checkFromIndexSize(0L, queryBytes, b.byteSize());
             Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
             assert validateBulkSparse(addresses, count, length, elementBits, result);
             return true;
@@ -384,6 +484,36 @@ public final class JdkVectorLibrary implements VectorLibrary {
             Objects.checkFromIndexSize(0L, (long) count * Integer.BYTES, offsets.byteSize());
             Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
             assert validateBulkOffsets(a, offsets, count, length, pitch, result, (long) length * Short.BYTES);
+            return true;
+        }
+
+        static boolean checkBFloat16BulkSparse(
+            int queryElementSize,
+            MemorySegment addresses,
+            MemorySegment b,
+            int length,
+            int count,
+            MemorySegment result
+        ) {
+            Objects.checkFromIndexSize(0L, (long) count * Long.BYTES, addresses.byteSize());
+            Objects.checkFromIndexSize(0L, (long) length * queryElementSize, b.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
+            assert validateBulkSparse(addresses, count, length, 16, result);
+            return true;
+        }
+
+        static boolean checkBBQBulkSparse(
+            int dataBits,
+            MemorySegment addresses,
+            MemorySegment query,
+            int datasetVectorLengthInBytes,
+            int count,
+            MemorySegment result
+        ) {
+            final int queryBits = 4;
+            Objects.checkFromIndexSize(0L, (long) count * Long.BYTES, addresses.byteSize());
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * (queryBits / dataBits), query.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
             return true;
         }
 
@@ -460,7 +590,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
             if (length <= 0) throw new IllegalArgumentException("length must be positive: " + length);
             checkSegmentAlignment(addresses, Long.BYTES, "addresses", "long");
             checkSegmentAlignment(result, Float.BYTES, "result", "float");
-            long vectorBytes = (long) length * elementBits / 8;
+            long vectorBytes = elementBits >= 8 ? (long) length * elementBits / 8 : length;
             for (int i = 0; i < count; i++) {
                 long addr = addresses.getAtIndex(JAVA_LONG, i);
                 if (addr == 0) {
@@ -734,11 +864,123 @@ public final class JdkVectorLibrary implements VectorLibrary {
             }
         }
 
+        private static float bbqApplyCorrectionsEuclideanBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsEuclideanBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
+        private static float bbqApplyCorrectionsMaxInnerProductBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsMaxInnerProductBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
+        private static float bbqApplyCorrectionsDotProductBulk(
+            MemorySegment data,
+            int bulkSize,
+            int vectorSizeInBytes,
+            int pitchInBytes,
+            int dimensions,
+            float queryLowerInterval,
+            float queryUpperInterval,
+            int queryComponentSum,
+            float queryAdditionalCorrection,
+            float queryBitScale,
+            float indexBitScale,
+            float centroidDp,
+            MemorySegment scores
+        ) {
+            try {
+                return (float) bbqApplyCorrectionsDotProductBulk$mh.invokeExact(
+                    data,
+                    bulkSize,
+                    vectorSizeInBytes,
+                    pitchInBytes,
+                    dimensions,
+                    queryLowerInterval,
+                    queryUpperInterval,
+                    queryComponentSum,
+                    queryAdditionalCorrection,
+                    queryBitScale,
+                    indexBitScale,
+                    centroidDp,
+                    scores
+                );
+            } catch (Throwable t) {
+                throw new AssertionError(t);
+            }
+        }
+
         private static final Map<OperationSignature<?>, MethodHandle> HANDLES_WITH_CHECKS;
 
         static final MethodHandle APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
         static final MethodHandle APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
         static final MethodHandle APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
+
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
+        static final MethodHandle BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
 
         static {
             MethodHandles.Lookup lookup = MethodHandles.lookup();
@@ -904,6 +1146,46 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         MethodHandles.empty(op.getValue().type())
                                     );
                                 }
+                                case BBQType bbq -> {
+                                    MethodHandle checkMethod = lookup.findStatic(
+                                        JdkVectorSimilarityFunctions.class,
+                                        "checkBBQBulkSparse",
+                                        MethodType.methodType(
+                                            boolean.class,
+                                            int.class,
+                                            MemorySegment.class,
+                                            MemorySegment.class,
+                                            int.class,
+                                            int.class,
+                                            MemorySegment.class
+                                        )
+                                    );
+                                    yield MethodHandles.guardWithTest(
+                                        MethodHandles.insertArguments(checkMethod, 0, bbq.dataBits()),
+                                        op.getValue(),
+                                        MethodHandles.empty(op.getValue().type())
+                                    );
+                                }
+                                case BFloat16QueryType bfq -> {
+                                    MethodHandle checkMethod = lookup.findStatic(
+                                        JdkVectorSimilarityFunctions.class,
+                                        "checkBFloat16BulkSparse",
+                                        MethodType.methodType(
+                                            boolean.class,
+                                            int.class,
+                                            MemorySegment.class,
+                                            MemorySegment.class,
+                                            int.class,
+                                            int.class,
+                                            MemorySegment.class
+                                        )
+                                    );
+                                    yield MethodHandles.guardWithTest(
+                                        MethodHandles.insertArguments(checkMethod, 0, bfq.bytes()),
+                                        op.getValue(),
+                                        MethodHandles.empty(op.getValue().type())
+                                    );
+                                }
                                 default -> throw new IllegalArgumentException("Unknown handle type " + op.getKey().dataType());
                             };
 
@@ -1017,6 +1299,39 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     "applyCorrectionsDotProductBulk",
                     scoringFunction
                 );
+
+                MethodType bbqScoringFunction = MethodType.methodType(
+                    float.class,
+                    MemorySegment.class,  // data
+                    int.class,            // bulkSize
+                    int.class,            // vectorSizeInBytes
+                    int.class,            // pitchInBytes
+                    int.class,            // dimensions
+                    float.class,          // queryLowerInterval
+                    float.class,          // queryUpperInterval
+                    int.class,            // queryComponentSum
+                    float.class,          // queryAdditionalCorrection
+                    float.class,          // queryBitScale
+                    float.class,          // indexBitScale
+                    float.class,          // centroidDp
+                    MemorySegment.class   // scores
+                );
+
+                BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsEuclideanBulk",
+                    bbqScoringFunction
+                );
+                BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsMaxInnerProductBulk",
+                    bbqScoringFunction
+                );
+                BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK = lookup.findStatic(
+                    JdkVectorSimilarityFunctions.class,
+                    "bbqApplyCorrectionsDotProductBulk",
+                    bbqScoringFunction
+                );
             } catch (ReflectiveOperationException e) {
                 throw new AssertionError(e);
             }
@@ -1059,6 +1374,21 @@ public final class JdkVectorLibrary implements VectorLibrary {
         @Override
         public MethodHandle applyCorrectionsDotProductBulk() {
             return APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsEuclideanBulk() {
+            return BBQ_APPLY_CORRECTIONS_EUCLIDEAN_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsMaxInnerProductBulk() {
+            return BBQ_APPLY_CORRECTIONS_MAX_INNER_PRODUCT_HANDLE_BULK;
+        }
+
+        @Override
+        public MethodHandle bbqApplyCorrectionsDotProductBulk() {
+            return BBQ_APPLY_CORRECTIONS_DOT_PRODUCT_HANDLE_BULK;
         }
     }
 }
